# -Anti-Course-Cheating-Plug

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  ENHANCEMENTS.md  README.md  alembic.ini  backup.py  chaoxing_worker.py  config.py  course_progress.csv  course_progress_251060150506.csv  docker-compose.yml  manage.py  models.py  pyproject.toml  requirements.txt  run.py  standalone_exam.py  study_worker.py  test_all_platforms.py  worker.py  wsgi.py
alembic/: env.py
api/: auth.py  compat.py  crypto.py  database.py  db_engine.py  dependencies.py  main.py  models.py  redis_client.py  startup.py  utils.py
docs/: ARCHITECTURE.md  BROWSER_TESTING.md  BUGFIX.md  CLAUDE.md  README.md  使用说明.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
infrastructure/: anti_test.py  captcha.py  chaoxing_crawler.py  chaoxing_discuss.py  chaoxing_points.py  chaoxing_quiz.py  chaoxing_reporter.py  chaoxing_session.py  course_crawler.py  dashboard.py  data_cleaner.py  exam_answerer.py  exam_fetcher.py  exam_login.py  heartbeat.py  http_session.py  platform_discovery.py  platform_health.py  project_solver.py  rich_ui.py  session_logger.py  study_record_crawler.py  study_reporter.py  task_filter.py
presentation/: account_manager.py  cli.py  progress_dashboard.py  study_cli.py  utils.py
script/: _remote_cmd.py  _remote_query.py  _run_batch_exam.py  _setup_nginx.py  build_tabs.py  check_cookies.py  create_tab_components.py  deploy.py  deploy_correction.py  deploy_correction2.py  (+94 more)
(+386 files in other folders)
